Added code questions

--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 
 <head>
     <title>Midterm Test</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/water.css@2/out/dark.css">
     <style>
         /* Add your CSS styles here */
-        body {
+        /* body {
             font-family: Arial, sans-serif;
             margin: 20px;
         }
@@ -16,10 +17,10 @@
         }
 
         .question {
-            border: 1px solid #ccc;
-            padding: 10px;
-            margin-bottom: 10px;
-        }
+            /* border: 1px solid #ccc; */
+        /* padding: 10px;
+            margin-bottom: 10px; */
+        /* } */
 
         input[type="radio"] {
             margin-right: 5px;
@@ -34,7 +35,7 @@
         }
 
         .unanswered {
-            background-color: lightgray;
+            background-color: rgb(15, 4, 25);
         }
 
         #score {
@@ -57,7 +58,7 @@
         }
 
         .modal-content {
-            background-color: white;
+            background-color: rgb(30, 20, 30);
             padding: 20px;
             border-radius: 5px;
             box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
@@ -70,6 +71,8 @@
 </head>
 
 <body>
+    <button onclick="window.location.href='./codequestions/index.html'">Go to Code Questions</button>
+
     <h1>Midterm Test</h1>
     <form id="quiz-form">
         <!-- Section 1: Strings -->
